<resources>
    <string name="app_name">Homework</string>
    <string name="account">Account:</string>
    <string name="todo">TODO</string>
    <string name="xinlang">新浪微博</string>
    <string name="tenxun">腾讯微博</string>
    <string name="user">用户名</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="user_password_login">用户名密码登陆</string>
    <string name="password">密码</string>
</resources>
