<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login_bg">
    <com.example.homework.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/splash_logo"
        android:contentDescription="@string/todo" />
    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape"
            />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user"
            android:textSize="25sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/password"
            android:background="@drawable/ic_user"
            android:layout_toStartOf="@+id/password"
            android:contentDescription="@string/todo" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape"
            />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/xinlang"
            android:textSize="25sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/user_name"
            android:background="@drawable/account_sina"
            android:layout_toStartOf="@+id/user_name"
            android:contentDescription="@string/todo"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape"
            />

        <TextView
            android:id="@+id/text_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tenxun"
            android:textSize="25sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/text_view3"
            android:background="@drawable/account_tencent"
            android:layout_toStartOf="@+id/text_view3"
            android:contentDescription="@string/todo"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/register"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:layout_gravity="center"
        />
</LinearLayout>