<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="25dp"
            android:background="@drawable/ic_back_register"
            android:layout_marginStart="25dp"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:text="@string/register"
            android:textSize="30sp"
            android:textColor="#5363A5"
            android:layout_marginStart="30dp" />
    </LinearLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="#fff"
        android:background="@drawable/shape"
        />

    <RelativeLayout
    android:id="@+id/linearlayout1"
    android:layout_width="300dp"
    android:layout_height="70dp"
    android:layout_above="@id/button1"
    android:layout_marginBottom="15dp"
    android:layout_centerInParent="true"
        android:background="@drawable/shape"
        >
        <EditText

            android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@id/image_view3"
        android:textSize="25sp"
        tools:ignore="RelativeOverlap"
        android:layout_toEndOf="@id/image_view3"
        android:hint="@string/password"
            android:maxLines="1"
            android:descendantFocusability="blocksDescendants"
            />


    <ImageView
        android:id="@+id/image_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_lock"
        android:contentDescription="@string/todo"
        android:layout_marginStart="50dp" />
</RelativeLayout>
    <RelativeLayout
        android:id="@+id/linearlayout2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_above="@id/linearlayout1"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_view1"
            android:layout_toEndOf="@id/image_view1"
            android:layout_centerVertical="true"
            android:hint="@string/user"
            android:textSize="25sp"
            tools:ignore="RelativeOverlap"
             />

        <ImageView
            android:id="@+id/image_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_user"
            android:contentDescription="@string/todo"
            android:layout_marginStart="50dp" />
    </RelativeLayout>
</RelativeLayout>